# localdm

./: .gitignore  Makefile  README.md  pyproject.toml
localdm/: __init__.py  types.py
localdm/core/: __init__.py  metadata.py  models.py  shared.py  storage.py  utils.py  validation.py
localdm/datasets/: __init__.py  dataset.py
localdm/managers/: __init__.py  manager.py
localdm/repositories/: __init__.py  data_repository.py  dataset_repository.py  metadata_repository.py  schemas.py
localdm/services/: __init__.py  dataset_service.py  display_service.py  lineage_service.py
