[project]
name = "localdm"
version = "0.1.0"
description = "Type-safe data versioning library with lineage tracking"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "exgael"}
]
keywords = ["data", "versioning", "lineage", "polars", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=17.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/exgael/localdm"
Repository = "https://github.com/exgael/localdm"
Issues = "https://github.com/exgael/localdm/issues"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["localdm"]

[tool.hatch.build.targets.wheel.force-include]
"localdm/py.typed" = "localdm/py.typed"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]

# Ignore rule groups that overlap with MyPy/Pyright or create unnecessary noise.
ignore = [
    "ANN",  # type-annotation rules (strict type checking is handled by Pyright/Mypy)
    "COM",  # comma rule, too noisy
    "D",    # docstring rules; optional for many projects
    "Q",    # quote normalization; unnecessary churn
    "PLR0913",  # too many arguments in function definition
    "PLC0415",  # import not at top-level (intentional for optional deps like rich)
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
